--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,17 +1,7 @@
-# PostgreSQL properties
-server.driver=org.postgresql.Driver
-server.url=jdbc:postgresql://localhost:5432/testteach
-#characterEncoding=cp1252&
-server.login=postgres
-server.password=1111
-#server.characterEncoding=UTF-8
-# Hibernate properties
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.format_sql=true
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
-#hibernate.hbm2ddl.auto=none,create-only,drop,create,create-drop,validate,update
-#https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#configurations-hbmddl
-hibernate.packagesToScan=by.ankudovich.center
-
-spring.mvc.hiddenmethod.filter.enabled=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=1111
+spring.datasource.url=jdbc:postgresql://localhost:5432/testteach
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
