--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/testteach
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+management.endpoint.loggers.enabled=true
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.server.port=8080
